KafakWithK8S/kafka-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: kafka
  name: kafka
spec:
  replicas: 2
  selector:
    matchLabels:
      service: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: kafka
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka
        volumeMounts:
          - mountPath: /app/folder
            name: kafka-broker-data
        imagePullPolicy: IfNotPresent
        image: confluentinc/cp-kafka:7.3.0
        ports:
          - containerPort: 29092
          - containerPort: 9092
      hostname: kafka
      restartPolicy: Always
      volumes:
      - name: kafka-broker-data
        persistentVolumeClaim:
          claimName: kafka-broker-pvc
