KafakWithK8S/kafka-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
  labels:
    service: connect
spec: 
  replicas: 2
  selector:
    matchLabels:
      service: connect
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: connect
    spec:
      hostname: connect
      restartPolicy: Always
      enableServiceLinks: false
      containers:
        - name: connect
          image: confluentinc/cp-kafka-connect-base:7.2.2
          ports:
            - containerPort: 30083
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "confluent-hub install --no-prompt mongodb/kafka-connect-mongodb:1.8.1"]
