KafakWithK8S/kafka-rest-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-proxy
  labels:
    service: rest-proxy
spec: 
  replicas: 2
  selector:
    matchLabels:
      service: rest-proxy
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: rest-proxy
    spec:
      hostname: rest-proxy
      restartPolicy: Always
      enableServiceLinks: false
      containers:
        - name: rest-proxy
          image: confluentinc/cp-kafka-rest:7.3.0
          ports:
            - containerPort: 30082
