KafakWithK8S/kafka-schema-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  labels:
    service: schema-registry
spec: 
  replicas: 1
  selector:
    matchLabels:
      service: schema-registry
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        service: schema-registry
    spec:
      hostname: schema-registry
      restartPolicy: Always
      enableServiceLinks: false
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.3.0
          ports:
            - containerPort: 30081
