KafakWithK8S/kafka-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kafka
  name: kafka
spec:
  selector:
    service: kafka
  ports:
    # - name: internal
    #   port: 29092
    #   targetPort: 29092
    # - name: external
    #   port: 9092
    #   targetPort: 9092
    - name: internal
      port: 29092
      targetPort: 29092
    - name: external
      port: 30092
      targetPort: 9092
      nodePort: 30192
  type: NodePort
