KafakWithK8S/kafka-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: connect
  name: connect
spec:
  ports:
    - port: 30083
      name: outport
      targetPort: 30083
      nodePort: 30083
  type: NodePort
  selector:
    service: connect
