KafakWithK8S/kafka-zoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper
  name: zookeeper
# spec:
#   ports:
#     - name: "2181"
#       port: 2181
#       targetPort: 2181
#   selector:
#     service: zookeeper


# spec:
#   type: ClusterIP
#   selector:
#     service: zookeeper
#   ports:
#     - name: "2181"
#       port: 2181
#       targetPort: 2181


spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  selector:
    service: zookeeper
