KafakWithK8S/ingress-service.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.citrix.com/insecure-port: "9092"
    ingress.citrix.com/insecure-service-type: "tcp"
spec:
  defaultBackend:
    service:
      name: service-kafka
      port:
        number: 9092
